--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>https://sonarcloud.io/</sonar.host.url>
                 <sonar.login>7c6732c4dea5c1f40cb291d13bcde3e0a21d30a4</sonar.login>
-		<sonar.organization>rt-ecom-app</soanr.organization>
+		<!--<sonar.organization>rt-ecom-app</soanr.organization>-->
              
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
