--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		 <!--<sonar.host.url>http://15.207.111.27:9000/</sonar.host.url>
+		 <sonar.host.url>http://15.207.111.27:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
-		<sonar.password>admin</sonar.password> --> 
+		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>fb-release</name>
-	      <url>http://3.109.206.200:8081/repository/fb-release/</url>
+	      <url>http://65.0.107.120:8081/repository/fb-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>fb-snapshot </name>
-	      <url>http://3.109.206.200:8081/repository/fb-snapshot/</url>
+	      <url>http://65.0.107.120:8081/repository/fb-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
